Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #312170 Fix misplaced parenthesis in jCalendar theme.
- #313161 Use date_id as iCal UID to be sure it is unique.
- #303537 Display:relative should be position:relative.
- #313538 Fix color typo in calendar.css.
- #309608, #309253 Get rid of attempt to simplify the navigation query, it is too easily broken. 
- #309391 Now that the Views fatal error for missing display handlers is fixed, add the ical display back.

Version 2.0 rc2
=================

- #301414 Revert http://drupal.org/cvs?commit=133523, wrong way to fix that.
- #308372 Make ical display handlers are removed from views display table when Calendar iCal is disabled.
- Eliminate query for navigation display.
- Calendar ical theme was in the wrong folder, move it to the ical folder.
- #303000 The calendar ical feed was deeply sub-classed and wasn't working right, rewrite it to not require so many other classes.
- #294469 Get rid of redundant timezone conversion that showed dates without timezone conversion in UTC.
- #303999 Correct theme paths for Views themes.
- #304762 Add missing folders for translations.
- Update to new Views2 API. Now requires latest versions of Views and CCK, and files have been re-arranged.
- Replace all include_once() with require_once().
- #301324 Rework calendar date selector to use site short date format.
- Fix css for week number to be sure it stays small in all browsers.

Version 2.0 rc1
=================

- Fix jCalendar popup so it doesn't do anything on items without a nid, like remote nodes.
- Make sure Devel module doesn't add queries to Calendar Popups.
- #292306 Make sure no error is thrown if $GLOBALS['calendar_stripes'] is empty.
- Fix day theme, there is no rows array here, it is a single rendered value.
- CCK field labels were getting lost if 'widget' was selected.