@@ -6,6 +6,8 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- Get rid of deprecated theme for ical output that is not being used in current code.
+- #307544 Get rid of extra line feed at end of ical description and make sure template works correctly.
 - #312170 Fix misplaced parenthesis in jCalendar theme.
 - #313161 Use date_id as iCal UID to be sure it is unique.
 - #303537 Display:relative should be position:relative.
